# KG_utils

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CITATION.cff  LICENSE  README.md  commit.txt  pyproject.toml  pytest.ini  release-notes.md
.dockg/: embeddings.json
.github/workflows/: ci.yml  release.yml
.pycodekg/snapshots/: manifest.json
docs/: encode-batch-memory-postmortem.md  synthesis.md
src/kg_utils/: __init__.py  corpus_embedder.py  embed.py  embedder.py  extractor.py  module.py  pipeline.py  semantic.py  specs.py  store.py  vector_backend.py
src/kg_utils/retrieval/: __init__.py  hits.py
src/kg_utils/snapshots/: manager.py
src/kg_utils/synthesis/: __init__.py  _config.py  _image.py  _text.py  factory.py
src/kg_utils/worker/: __init__.py  client.py  ops.py
tests/: test_corpus_embedder.py  test_embed.py  test_embedder.py  test_integration.py  test_pipeline_module.py  test_pipeline_utils.py  test_retrieval_hits.py  test_semantic.py  test_snapshots.py  test_store.py  test_synthesis_config.py  test_synthesis_factory.py  test_synthesis_image.py  test_synthesis_text.py  test_types.py  test_vector_backend.py  test_vector_backend_selection.py  test_worker_client.py  test_worker_ops.py
