# pyproject.toml — kgmodule-utils: shared types and snapshot infrastructure for KG modules
#
# Zero-dependency (stdlib-only) package providing:
#   kg_utils.types    — NodeSpec, EdgeSpec, KGExtractor, KGModule, etc.
#   kg_utils.snapshots — Snapshot, SnapshotManager, SnapshotManifest, etc.

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "kgmodule-utils"
version = "0.3.0"
description = "Shared types, graph store, semantic index, and pipeline base for the KGModule SDK"
readme = "README.md"
license = { text = "Elastic-2.0" }
authors = [
    { name = "Eric G. Suchanek, PhD", email = "suchanek@flux-frontiers.com" }
]
keywords = ["knowledge-graph", "kgmodule", "sdk", "types", "snapshots"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.12,<3.14"
dependencies = []

[project.optional-dependencies]
semantic = [
    "lancedb>=0.19.0",
    "numpy>=1.24.0",
    "sentence-transformers>=5.4.1",
    "torch>=2.5.1",
    "transformers>=4.40.0,<4.57",
]

[project.urls]
Repository = "https://github.com/Flux-Frontiers/kg_utils"

[tool.poetry]
packages = [{include = "kg_utils", from = "src"}]

[tool.poetry.group.kgdeps]
optional = true

[tool.poetry.group.kgdeps.dependencies]
pycode-kg = ">=0.18.1"
doc-kg    = ">=0.15.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest     = "^8.0.0"
pytest-cov = "^5.0.0"
black      = ">=22.0"
ruff       = ">=0.4.0"
mypy       = ">=1.10.0"

[tool.black]
line-length    = 100
target-version = ["py312", "py313"]

[tool.ruff]
line-length    = 100
target-version = "py312"

[tool.pylint.main]
source-roots = ["src"]
init-hook = "import sys; sys.path.insert(0, 'src')"

[tool.pylint."messages control"]
disable = [
    "missing-module-docstring",
]

[tool.mypy]
python_version     = "3.12"
strict             = true
warn_unused_ignores = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "sentence_transformers.*",
    "transformers.*",
    "numpy.*",
    "lancedb",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "kg_utils.embedder"
disallow_untyped_calls = false
