# pyproject.toml — kgmodule-utils: shared types and snapshot infrastructure for KG modules
#
# Zero-dependency (stdlib-only) package providing:
#   kg_utils.types    — NodeSpec, EdgeSpec, KGExtractor, KGModule, etc.
#   kg_utils.snapshots — Snapshot, SnapshotManager, SnapshotManifest, etc.

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "kgmodule-utils"
version = "0.6.1"
description = "Shared types, graph store, semantic index, and pipeline base for the KGModule SDK"
readme = "README.md"
license = { text = "Elastic-2.0" }
authors = [
    { name = "Eric G. Suchanek, PhD", email = "suchanek@flux-frontiers.com" }
]
keywords = ["knowledge-graph", "kgmodule", "sdk", "types", "snapshots"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.12,<3.14"
dependencies = []

[project.optional-dependencies]
semantic = [
    "lancedb>=0.19.0",
    "numpy>=1.24.0",
    "rich>=13.0.0",
    "sentence-transformers>=5.4.1",
    "torch>=2.5.1",
    "transformers>=4.40.0,<4.57",
]
# Exact pin: sqlite-vec is pre-1.0, breaking minors are possible. Prebuilt
# wheels exist for macOS arm64 + Linux x86_64 (no compile step).
sqlite-vec = [
    "sqlite-vec==0.1.9",
]
synthesis = [
    "httpx>=0.27.0",
    "openai>=1.30.0",
    "pillow>=10.0.0",
]
synthesis-mflux = [
    "httpx>=0.27.0",
    "openai>=1.30.0",
    "pillow>=10.0.0",
    "mflux>=0.9.0",
]

[project.urls]
Repository = "https://github.com/Flux-Frontiers/kg_utils"

[tool.poetry]
packages = [{include = "kg_utils", from = "src"}]

[tool.poetry.group.kgdeps]
optional = true

[tool.poetry.group.kgdeps.dependencies]
pycode-kg = ">=0.18.1"
doc-kg    = ">=0.15.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest     = "^8.0.0"
pytest-cov = "^5.0.0"
black      = ">=22.0"
ruff       = ">=0.4.0"
ty         = ">=0.0.41"

[tool.black]
line-length    = 100
target-version = ["py312", "py313"]

[tool.ruff]
line-length    = 100
target-version = "py312"

[tool.pylint.main]
source-roots = ["src"]
init-hook = "import sys; sys.path.insert(0, 'src')"

[tool.pylint."messages control"]
disable = [
    "missing-module-docstring",
]
